# COM3528

./: README.md
com3528/: CMakeLists.txt  package.xml
com3528_examples/: CMakeLists.txt  package.xml
com3528_examples/launch/: sim_football.launch  sim_move_ball.launch
com3528_examples/nodes/: README.md  publisher_flags.py  publisher_illum.py  publisher_joint.py  publisher_movement.py  subscriber_cam.py  subscriber_cliff.py  subscriber_light.py  subscriber_odom.py  subscriber_sonar.py  subscriber_touch.py
com3528_examples/scripts/: ball_mover.py
com3528_examples/sim/worlds/: football_pitch.world
com3528_examples/src/: k_bandit.py  kick_blue_ball.py  miro_kc_examples.py
