<?xml version="1.0"?>
<package format="2">
  <name>com3528</name>
  <version>0.0.1</version>
  <description>The COM3528 meta-package</description>

  <maintainer email="alex.lucas@sheffield.ac.uk">Alex Lucas</maintainer>
  <url>https://github.com/AlexandrLucas/COM3528/wiki</url>
  <license>CC BY-NC</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>com3528_examples</exec_depend>
  <export><metapackage/></export>

</package>